--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ rvm:
 deploy:
   skip_cleanup: true
   edge: true
+  edge:
+    source: criteo-forks/dpl
+    branch: chef_ruby2
   provider: chef-supermarket
   user_id: criteo
   cookbook_category: Utilities
