Fix the travis deploy job + Fix Apache2 license
Change-Id: Ib23095155e06c0de783b0a534a80d548a636dd6e

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ cache: bundler
 rvm:
 - 2.3.2
 deploy:
+  edge:
+    source: criteo-forks/dpl
+    branch: chef_ruby2
   skip_cleanup: true
   edge: true
   provider: chef-supermarket
