Migrate CI to GH Actions
* Remove Travis config
* Migrate from berkshelf to policyfile
* Update kitchen config paths

Change-Id: I072cf26b3ebdb7779de0def6e1b844504c0ce89a

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -39,4 +39,7 @@ platforms:
       image_id: ami-d2c924b2
 
 suites:
-<%= require 'erubis'; Erubis::Eruby.new(File.read('.kitchen_suites.yml')).evaluate %>
+- name: default
+  run_list:
+    - recipe[librenms::default]
+  attributes:
