--- a/kitchen.yml
+++ b/kitchen.yml
@@ -30,6 +30,12 @@ driver:
         volume_type: gp2
         delete_on_termination: true
 
+provisioner:
+  name: chef_zero
+  install_strategy: always
+  chef_license: accept
+  product_name: chef
+
 transport:
   ssh_key: <%= ENV['HOME'] %>/.ssh/id_rsa
 
@@ -39,4 +45,7 @@ platforms:
       image_id: ami-d2c924b2
 
 suites:
-<%= require 'erubis'; Erubis::Eruby.new(File.read('.kitchen_suites.yml')).evaluate %>
+- name: default
+  run_list:
+    - recipe[librenms::default]
+  attributes:
